---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/dead_global_elimination/struct_global_read.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.7 = int 10
temp.8 = int 20
temp.0.x.9 = temp.7
temp.0.y.10 = temp.8
setglobal 1, temp.0.x.9
setglobal 2, temp.0.y.10
getglobal temp.11, 1
temp.12 = extern test(temp.11)
return 


----------- eliminate_dead_globals -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.7 = int 10
temp.8 = int 20
temp.0.x.9 = temp.7
temp.0.y.10 = temp.8
setglobal 0, temp.0.x.9
getglobal temp.11, 0
temp.12 = extern test(temp.11)
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.7 = int 10
temp.8 = int 20
temp.0.x.9 = temp.7
setglobal 0, temp.0.x.9
getglobal temp.11, 0
temp.12 = extern test(temp.11)
return 


----------- dead_store_elimination -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.7 = int 10
temp.0.x.9 = temp.7
setglobal 0, temp.0.x.9
getglobal temp.11, 0
temp.12 = extern test(temp.11)
return
